# iot-mqtt-sqs

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
src/mqtt_publisher/: aws.py  base.py
src/sensor/: base.py  models.py  real.py  simulated.py
src/sqs_client/: aws.py  base.py
